<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_name">STS</string>
    <string name="btn_test">start</string>
    <string name="btn_test1">Reset</string>
    <string name="clear">force clear result</string>
    <string name="day_set_text">if failed 3 times the first day ,the interval sending time of next day (minutes)</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_message">text</string>
    <string name="dialog_message_promp">"Press Continue to register your phone with us for warranty services, updates and more.
 *Standard SMS charges applicable."</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_pop_contact">Press Yes to register your handset to Wiko.</string>
    <string name="dialog_pop_title">Warning</string>
    <string name="dialog_title">Information</string>
    <string name="dialog_title_promp">Registration</string>
    <string name="dialog_yes">Yes</string>
    <string name="maxtime">How long to set STS after boot up (minutes):</string>
    <string name="notify">Do you need pop up</string>
    <string name="process" />
    <string name="save">save</string>
    <string name="sharedUserId" />
    <string name="testtime">Interval time of error requests(minute,min 1):</string>
    <string name="version" />
    <string name="wiko_sts_text1">Congratulations for buying a WIKO phone!</string>
    <string name="wiko_sts_text2">WIKO is committed to ensuring that you receive personalised, real-time technical assistance for your phone.</string>
    <string name="wiko_sts_text3">Registering your device means that we can keep you informed of available updates and hardware improvements.*</string>
    <string name="wiko_sts_text4">* By confirming the registration of your phone with WIKO, you acknowledge that you have read and accepted the agreement on data usage included in the user guide supplied with your phone or available on our website wikomobile.com.</string>
    <string name="wiko_sts_title">WIKO:</string>
    <string name="qmobile_server_number">Set server number:</string>
    <string name="qmobile_sts_text">Thank you for choosing QMobile, please press OK to get registered with us for better services, warranty support and product updates. (Standard SMS charges will be applied)</string>
    <string name="select_send_type">Select send type:</string>
    <string name="select_send_type_title">when finish sts test,must uncheck the Switch</string>
    <string name="sts_invalid_value">Invalid input.</string>
    <string name="switch_send_type">Switch</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
</resources>
